[package]
edition = "2021"
name = "loxr"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "_lox_"
path = "src/_lox_/lib.rs"

[[bin]]
name = "loxr"
path = "src/main.rs"

[dependencies]
better_peekable = "0.2.4"
# clap = { version = "3.2.8", features = ["derive"] }
colored = "2.0.0"
derive_more = "0.99.17"
lazy_static = "1.4.0"
rustyline = "9.1.2"
thiserror = "1.0.30"
